--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <div class="todo__background"></div>
   </header>
   <main class="todo__app">
+    <form action="" class="todo__add-task">
+      <input type="text" class="todo__add-task-input">
+    </form>
     <ul class="todo__task-list">
       <li class="todo__task">
         <img src="./images/icon-check.svg" alt="" class="todo__task-check">
