--- a/index.html
+++ b/index.html
@@ -18,31 +18,36 @@
   </header>
   <main class="todo__app">
     <form action="" class="todo__add-task">
-      <input type="text" class="todo__add-task-input">
+        <i class="fa-solid fa-check" id="todo__add-task-check"></i>
+        <input type="text" class="todo__add-task-input"></input>
     </form>
     <ul class="todo__task-list">
       <li class="todo__task">
-        <img src="./images/icon-check.svg" alt="" class="todo__task-check">
+        <i class="fa-solid fa-check" id="todo__task-check"></i>
         <span class="todo__task-text">Complete online JavaScript course</span>
-        <img src="./images/icon-cross.svg" alt="" class="todo__task-cross">
+        <i class="fa-solid fa-xmark" id="todo__task-cross"></i>
+      </li>
+      <li class="todo__task">
+        <i class="fa-solid fa-check" id="todo__task-check"></i>
+        <span class="todo__task-text">Complete online JavaScript course</span>
+        <i class="fa-solid fa-xmark" id="todo__task-cross"></i>
+      </li>
+      <li class="todo__task-list-info">
+        <span class="todo__task-left"><span class="todo__task-left-number">5</span> items left</span>
+        <span class="todo__task-clear-completed">Clear Completed</span>
       </li>
     </ul>
-    <article class="todo__task-list-info">
-      <span class="todo__task-left"><span class="todo__task-left-number">5</span> items left</span>
-      <span class="todo__task-clear-completed">Clear Completed</span>
-    </article>
-  </main>
-  <footer>
-    <nav class="todo__choose-tasks">
+    <article class="todo__choose-tasks">
       <span class="todo__all-tasks">All</span>
       <span class="todo__active-tasks">Active</span>
       <span class="todo__completed-tasks">Completed</span>
-    </nav>
+    </article>
     <span class="todo__drag-and-drop">Drag and drop to reorder list</span>
-    <div class="attribution">
+  </main>
+  <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
-    </div>
   </footer>
+  <script src="https://kit.fontawesome.com/52cc5773d5.js" crossorigin="anonymous"></script>
 </body>
 </html>
