started integration with backend

--- a/index.html
+++ b/index.html
@@ -22,21 +22,11 @@
         <input type="text" class="todo__add-task-input"></input>
     </form>
     <ul class="todo__task-list">
-      <li class="todo__task">
-        <i class="fa-solid fa-check" id="todo__task-check"></i>
-        <span class="todo__task-text">Complete online JavaScript course</span>
-        <i class="fa-solid fa-xmark" id="todo__task-cross"></i>
-      </li>
-      <li class="todo__task">
-        <i class="fa-solid fa-check" id="todo__task-check"></i>
-        <span class="todo__task-text">Complete online JavaScript course</span>
-        <i class="fa-solid fa-xmark" id="todo__task-cross"></i>
-      </li>
-      <li class="todo__task-list-info">
-        <span class="todo__task-left"><span class="todo__task-left-number">5</span> items left</span>
-        <span class="todo__task-clear-completed">Clear Completed</span>
-      </li>
     </ul>
+    <article class="todo__task-list-info">
+      <span class="todo__task-left"><span class="todo__task-left-number">5</span> items left</span>
+      <span class="todo__task-clear-completed">Clear Completed</span>
+    </article>
     <article class="todo__choose-tasks">
       <span class="todo__all-tasks">All</span>
       <span class="todo__active-tasks">Active</span>
@@ -48,6 +38,7 @@
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
   </footer>
+  <script src="./src/app.js"></script>
   <script src="https://kit.fontawesome.com/52cc5773d5.js" crossorigin="anonymous"></script>
 </body>
 </html>
