added function for updating a number of tasks

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <ul class="todo__task-list">
     </ul>
     <article class="todo__task-list-info">
-      <span class="todo__task-left"><span class="todo__task-left-number">5</span> items left</span>
+      <span class="todo__task-left"><span class="todo__tasks-left-number">5</span> items left</span>
       <span class="todo__task-clear-completed">Clear Completed</span>
     </article>
     <article class="todo__choose-tasks">
