styling for desktop

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <main class="todo__app">
     <form action="" class="todo__add-task">
         <i class="fa-solid fa-check" id="todo__add-task-check"></i>
-        <input type="text" class="todo__add-task-input"></input>
+        <input type="text" class="todo__add-task-input" placeholder="Create a new todo..."></input>
     </form>
     <ul class="todo__task-list">
     </ul>
