--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./src/styles.css">
   <title>Frontend Mentor | Todo app</title>
 </head>
-<body>
+<body class="todo__dark-theme">
   <header class="todo__header">
     <h1 class="todo__header-title">TODO</h1>
     <img class="todo__header-switch" src="./images/icon-sun.svg" alt="">
@@ -18,7 +18,7 @@
   </header>
   <main class="todo__app">
     <form action="" class="todo__add-task">
-        <i class="fa-solid fa-check" id="todo__add-task-check"></i>
+        <i id="todo__add-task-check"></i>
         <input type="text" class="todo__add-task-input" placeholder="Create a new todo..."></input>
     </form>
     <ul class="todo__task-list">
@@ -35,7 +35,7 @@
       <input type="radio" name="filter" id="completed" class="todo__completed-tasks-radio"></input>
       <label for="completed" class="todo__all-tasks">Completed</label>
     </article>
-    <span class="todo__drag-and-drop">Drag and drop to reorder list</span>
+    <p class="todo__drag-and-drop">Drag and drop to reorder list</p>
   </main>
   <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
